--- a/gallery.html
+++ b/gallery.html
@@ -155,7 +155,7 @@ img.hover-shadow {
 
 	<p class="title">UMA BREVE LINHA DO TEMPO DA ANTIGUIDADE OCIDENTAL</p>
 	<div class="links">
-		<a href="Timeline.html">GERAL</a>
+		<a href="index.html">GERAL</a>
 		<a href="#" class="deny">ALQUIMIA</a>
 		<a href="#" class="deny">FILOSOFIA</a>
 			<div class="lContainer">
