--- a/IronAge.html
+++ b/IronAge.html
@@ -64,9 +64,9 @@
 		<!-- CIVILIZAÇÕES -->
 
 		<g>
-			<path class="civ civEgypt2" id="berbers" onmouseover="showTipMap('berbers')" onmouseout="hideTipMap('berbers')"
+			<path class="civ2 civEgypt2" id="berbers" onmouseover="showTipMap('berbers')" onmouseout="hideTipMap('berbers')"
 			d="m 305.00002,475.55 0,69.45 95.00001,40 9.99997,-25.00002 -19.99998,-10 L 370,544.99999 l -4.99999,-10.00001 -15.00002,-4.99999 h -9.99998 l -25,-14.99999 v -5.00002 H 320 L 324.99999,500 320,485 309.99999,475 Z"/>
-			<path class="civ civEgypt2" id="libyans" onmouseover="showTipMap('libyans')" onmouseout="hideTipMap('libyans')"
+			<path class="civ2 civEgypt2" id="libyans" onmouseover="showTipMap('libyans')" onmouseout="hideTipMap('libyans')"
 			d="M 410,559.99998 419.99997,550 l -4.99999,-5.00001 4.99999,-10.00001 10.00001,-4.99999 h 15 l 5.00001,4.99999 49.99998,15.00002 -4.99993,30 -95.00001,5 z"/>
 			<path class="civ civEgypt" id="egypt" onmouseover="showTipMap('egypt')" onmouseout="hideTipMap('egypt')"
 			d="m 515.00002,549.99998 -15.00004,2e-5 -4.99994,30 30,60 -10,15 25,5 20,-20 20,-5 -2e-5,-5 -29.99999,-55.00002 -4.99999,-15 10,-9.99998 h -10 l -5,-5 -15.00001,-10e-6 z"/>
@@ -80,7 +80,7 @@
 			<path class="civ civMeso" id="chaldea" onmouseover="showTipMap('chaldea')" onmouseout="hideTipMap('chaldea')"
 			d="m 700.00005,556.99998 -4,-4.99999 -1.00002,-4 4.00002,-4.99999 4.99999,1.99999 1,4.99999 h -4.99999 z"/>
 			
-			<path class="civ civLevant2" id="arabs" onmouseover="showTipMap('arabs')" onmouseout="hideTipMap('arabs')"
+			<path class="civ2 civLevant2" id="arabs" onmouseover="showTipMap('arabs')" onmouseout="hideTipMap('arabs')"
 			d="m 570.00004,584.99999 7e-5,-19.99999 3,3 2,-3 10,-5 73,-30 12,20 10,8 14.99998,4 5.07072,-1.9125 9.92924,14.91248 L 749.99998,630 774.99997,624.99999 794.99998,605 l 10,25 29.99999,15 -24.99993,40 -25.00001,19.99998 L 754.99998,710 v 10 l -85,35 15.00007,-30 -20.00001,-40 -10.00001,-10.00001 h -19.99999 l -10,-4.99999 -10.00001,-10.00001 v -10 l -4.99999,-15 -10,-10 L 580.00002,590 Z"/>
 			<path class="civ civLevant" id="sheba" onmouseover="showTipMap('sheba')" onmouseout="hideTipMap('sheba')"
 			d="m 635.00004,674.99999 h 19.99999 L 665.00004,685 680.00003,714.99999 685.00005,725 l -15.00007,30 -9.99993,-5 -5.00002,-35.00001 z"/>
@@ -109,16 +109,16 @@
 			<path class="civ civIran" id="elam" onmouseover="showTipMap('elam')" onmouseout="hideTipMap('elam')"
 			d="m 715.00005,550 h -10 l -1,-5 -5,-2 -4.00002,-8.00002 -9.99998,-4.99998 -10.00001,-15 25.00001,-5 20,15 20,20 15,20 v 10 l -10,10 -15,-25 z"/>
 			
-			<path class="civ civIran" id="iranians" onmouseover="showTipMap('iranians')" onmouseout="hideTipMap('iranians')"
+			<path class="civ2 civIran" id="iranians" onmouseover="showTipMap('iranians')" onmouseout="hideTipMap('iranians')"
 			d="m 855.00001,370.00015 v 4.9997 l -9.99991,5.00021 v 9.99991 l -15.00012,5.00021 v -5.00021 h -9.9999 l -5.00021,-5.00021 v -9.99991 l -49.9999,-9.99984 -1.5e-4,9.99984 H 745 l -5.00021,5.00021 5.00021,4.9997 h -9.9999 l -5.00014,5.00022 h 5.0001 l 4.99973,5.0002 5.00021,9.99991 5.00022,5.00021 h 9.9999 l -5.00021,9.9999 5.00021,9.99991 v -9.99991 l 4.9997,-5.00021 h 5.00021 l 4.99969,9.99991 5.00021,5.00021 -5.00021,5.00021 h -9.9999 l -4.9997,-5.00021 v 15.00012 h 4.9997 l 5.00021,4.99969 v 5.00021 25.00003 l -20.00006,4.99999 -14.99999,-5.00001 -5.00002,-4.99999 h -4.99999 l 8e-5,9.99985 15,30 15,15 10,15 15.00001,15 15,10 -10e-6,24.99986 9.99991,15.00012 50.00005,9.9999 46.00029,-4.99969 L 920.00005,540 l 40.00002,-15 0,-20 -5,-5 -5,-10 5,-5 v -15 l -10,-10 0,-5 15,-4 -2.7e-4,-26.0001 -14.9996,9.9999 h -9.99991 l -15.00012,-9.9999 v -19.99981 l -15.00011,-15.00012 h -4.82296 l -30.17697,-19.99982 z"/>
 
-			<path class="civ civIran" id="aryans" onmouseover="showTipMap('aryans')" onmouseout="hideTipMap('aryans')"
+			<path class="civ2 civIran" id="aryans" onmouseover="showTipMap('aryans')" onmouseout="hideTipMap('aryans')"
 			d="m 900.00006,615 19.99997,-75 40.00004,-15 -2e-5,120 v 14.99999 l -14.99999,4.99999 -15,-14.99999 15,-10.00001 h -15 l -15,-9.99998 z"/>
 
-			<path class="civ civIran" id="cimmerians" onmouseover="showTipMap('cimmerians')" onmouseout="hideTipMap('cimmerians')"
+			<path class="civ2 civIran" id="cimmerians" onmouseover="showTipMap('cimmerians')" onmouseout="hideTipMap('cimmerians')"
 			d="m 410.00003,325 -2.5e-4,20.00013 v 19.99981 l 35.00045,15.00012 h 34.99993 l 9.99991,-5.00021 h 31.00017 l 8.99997,-14.9996 h 4.99969 l 5.00021,4.99969 19.99982,5.00021 -15.00012,4.9997 9.99991,5.00021 h 5.1e-4 l 4.9997,9.99991 4.98729,-0.004 5.01261,-4.99607 9.99991,-4.9997 h 10.00042 v -5.00021 h -15.00012 l -5.00021,-4.9997 v -5.00021 l 45.00036,-15.00011 4.99969,5.00021 h -4.99969 l -15.00012,5.00021 5.00021,4.99969 -5.00021,9.99991 h -5.00021 v 5.00021 l 15.00012,9.99991 14.99999,-1.2e-4 20.00001,-5 20,15 39.99988,9.99993 v -14.9996 L 694.99996,384.9999 705.00005,370 v -10 l -25,-30 h -10 l 2.4546,-4.90919 z"/>
 
-			<path class="civ civIran" id="scythians" onmouseover="showTipMap('scythians')" onmouseout="hideTipMap('scythians')"
+			<path class="civ2 civIran" id="scythians" onmouseover="showTipMap('scythians')" onmouseout="hideTipMap('scythians')"
 			d="m 670.00003,330 h 10 l 25.00001,29.99999 V 370 h 10 l 10.00001,-10.00001 h 4.99999 L 740.00005,355 h 19.99998 l 5.00002,10.00001 50,9.99998 10.00001,-15 h 4.99999 V 355 h 4.99999 l 5.00002,-5.00002 h 14.99999 l -10,10.00001 L 850.00006,370 h 19.99999 l 30.17708,19.99998 h 4.82293 l 14.99999,15.00003 v 19.99998 l 15,10.00001 h 10.00001 l 14.99999,-10.00001 v -99.99998 l -287.5454,0.0908 z"/>
 
 			<g class="civ civGreece" id="greece" onmouseover="showTipMap('greece')" onmouseout="hideTipMap('greece')">
@@ -143,7 +143,7 @@
 			<path class="civ civGreece" id="cyprus" onmouseover="showTipMap('cyprus')" onmouseout="hideTipMap('cyprus')"
 			d="M 569.99996,494.99998 559.99998,500 h -10 l -4.99999,4.99999 5.00004,4.99999 9.99995,-4.99999 h 4.99999 V 500 Z"/>
 		 
-			<path class="civ civRome" id="etruscans" onmouseover="showTipMap('etruscans')" onmouseout="hideTipMap('etruscans')"
+			<path class="civ2 civRome2" id="etruscans" onmouseover="showTipMap('etruscans')" onmouseout="hideTipMap('etruscans')"
 			d="m 335.00001,420 5.00002,-5.00002 L 335.00001,410 339.90796,404.80927 335.00001,395 l -2e-5,-20.00001 -30,14.99999 z"/>
 		 
 		 </g></g>
