--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
 			
 			<!--Events-->
 			
-			<span class="event event0 eSA0" onclick="showSidebarG('eSA0')">Revolução do Neolítico</span>
+			<span class="event event0 eSA0" onmouseenter="showTipG('oSA0')" onmouseleave="hideTip()" onclick="showSidebarG('eSA0')">Revolução do Neolítico</span>
 			<span class="event event0 eLevantS0 levant deny">Fundação da cidade de Jericó</span>
-			<span class="event event0 eSA00 meso deny" onclick="showSidebarG('eSA00')">Criação da Escrita Cuneiforme</span>
-			<span class="event event0 eSA1" onclick="showSidebarG('eSA1')">Idade do Cobre</span>
-			<span class="event event0 eMesoS0 meso deny">Fundação da cidade de Uruk</span>
-			<span class="event event0 eSA2 deny" onclick="showSidebarG('eSA2')">Idade do Bronze</span>
+			<span class="event event0 eSA00 meso deny">Criação da Escrita Cuneiforme</span>
+			<span class="event event0 eSA1" onmouseenter="showTipG('oSA1')" onmouseleave="hideTip()" onclick="showSidebarG('eSA1')">Idade do Cobre</span>
+			<span class="event event0 eMesoS0 meso deny" onmouseenter="showTipG('oMesoS0')" onmouseleave="hideTip()">Fundação da cidade de Uruk</span>
+			<span class="event event0 eSA2" onmouseenter="showTipG('oBA0')" onmouseleave="hideTip()" onclick="showSidebarG('eBA0')">Idade do Bronze</span>
 			
 		</section>
 		
@@ -184,17 +184,17 @@
 			<!--Events-->
 			
 			<span class="event event0 e3150bc egypt" onmouseenter="showTipEgypt('oEgyptB1')" onmouseleave="hideTip()" onclick="showSidebarEgypt('sbEgyptB1')">Unificação do Alto e Baixo Egito</span>
-			<span class="event event0 e2600bc egypt deny">Construção da Grande Pirâmide de Gizé</span>
-			<span class="event event0 e1650bc egypt deny">Governo do Egito pelos Hicsos</span>
-			<span class="event event0 e1353bc egypt deny">Reino de Akhenaten</span>
+			<span class="event event0 e2600bc egypt deny" onmouseenter="showTipG('o2600bc')" onmouseleave="hideTip()">Construção da Grande Pirâmide de Gizé</span>
+			<span class="event event0 e1650bc egypt deny" onmouseenter="showTipG('o1650bc')" onmouseleave="hideTip()">Governo do Egito pelos Hicsos</span>
+			<span class="event event0 e1353bc egypt deny" onmouseenter="showTipG('o1353bc')" onmouseleave="hideTip()">Reino de Aquenáton</span>
 			
-			<span class="event event0 e2025bc meso deny">Fundação da cidade-estado de Assur</span>
-			<span class="event event0 e1750bc meso deny">Criação do Código de Hamurabi</span>
-			<span class="event event0 e1595bc meso deny">Saque da Babilônia pelos hititas</span>
+			<span class="event event0 e2025bc meso deny" onmouseenter="showTipG('o2025bc')" onmouseleave="hideTip()">Fundação da cidade-estado de Assur</span>
+			<span class="event event0 e1750bc meso deny" onmouseenter="showTipG('o1750bc')" onmouseleave="hideTip()">Criação do Código de Hamurabi</span>
+			<span class="event event0 e1595bc meso deny" onmouseenter="showTipG('o1595bc')" onmouseleave="hideTip()">Saque da Babilônia pelos hititas</span>
 			<span class="event event0 e1363bc meso deny">Fundação do Império Assírio</span>
 			
 			<span class="event event0 e42ka" onclick="showSidebarG('e42ka')">Mudança Climática de 4200 ap</span>
-			<span class="event event0 eBAC" onclick="showSidebarG('eBAC')">Colapso da Idade do Bronze</span>
+			<span class="event event0 eBAC" onmouseenter="showTipG('oBAC')" onmouseleave="hideTip()" onclick="showSidebarG('eBAC')">Colapso da Idade do Bronze</span>
 		</section>
 		
 		<section id="iron">
@@ -232,9 +232,9 @@
 			<div class="overlay2 oGreece oGreeceI0" onmouseenter="showTipGreece('oGreeceI0')" onmouseleave="hideTip()"></div>
 			
 			<!--Events-->
-			<span class="event event0 eIA0" onclick="showSidebarG('eIA0')">Idade do Ferro</span>
-			<span class="event event0 e1100 meso">Criação do Enuma Elish</span>
-			<span class="event event0 eCIx">Início da Antiguidade Clássica</span>
+			<span class="event event0 eIA0" onmouseenter="showTipG('oIA0')" onmouseleave="hideTip()" onclick="showSidebarG('eIA0')">Idade do Ferro</span>
+			<span class="event event0 e1100 meso" onmouseenter="showTipG('o1100bc')" onmouseleave="hideTip()">Criação do Enuma Elish</span>
+			<span class="event event0 eCIx" onmouseenter="showTipG('oAA0')" onmouseleave="hideTip()" onclick="showSidebarG('eAA0')">Início da Antiguidade Clássica</span>
 		</section>
 		
 		<section id="ancient">
@@ -277,7 +277,7 @@
 			<!--Achaemenid Empire-->
 			<div class="overlay2 oEgypt oEgyptA2" onmouseenter="showTipEgypt('oEgyptA2')" onmouseleave="hideTip()" onclick="showSidebarEgypt('sbEgyptA2')"></div>
 			<!--Macedon Empire-->
-			<div class="overlay oEgypt oEgyptA3" onmouseenter="showTipEgypt('oGreeceA2')" onmouseleave="hideTip()" onclick="showSidebarEgypt('sbEgyptA3')"></div>
+			<div class="overlay oEgypt oEgyptA3" onmouseenter="showTipEgypt('oEgyptA3')" onmouseleave="hideTip()" onclick="showSidebarEgypt('sbEgyptA3')"></div>
 			<!--Ptolemaic Dynasty-->
 			<div class="overlay2 oEgypt oEgyptA4" onmouseenter="showTipEgypt('oEgyptA4')" onmouseleave="hideTip()" onclick="showSidebarEgypt('sbEgyptA4')"></div>
 			<!--Roman Empire-->
@@ -360,25 +360,25 @@
 			
 		<!-- Events -->
 			
-			<span class="event event0 eLevantA0 levant deny">Destruição de Israel</span>
-			<span class="event event0 eLevantA1 levant deny">Cerco a Jerusalém</span>
+			<span class="event event0 eLevantA0 levant deny" onmouseenter="showTipG('oLevantA0')" onmouseleave="hideTip()">Destruição de Israel</span>
+			<span class="event event0 eLevantA1 levant deny" onmouseenter="showTipG('oLevantA1')" onmouseleave="hideTip()">Cerco a Jerusalém</span>
 			<span class="event eLevantA2 levant" onmouseenter="showTipLevant('oLevantA3')" onmouseleave="hideTip()" onclick="showSidebarLevant('sbLevantA3')">Construção do Segundo Templo</span>
-			<span class="event event0 eLevantA3 levant deny">Nascimento de Jesus</span>
-			<span class="event event0 eLevantA4 levant deny">Destruição do Templo de Herodes</span>
+			<span class="event event0 eLevantA3 levant deny" onmouseenter="showTipG('oLevantA3')" onmouseleave="hideTip()">Nascimento de Jesus</span>
+			<span class="event event0 eLevantA4 levant deny" onmouseenter="showTipG('oLevantA4')" onmouseleave="hideTip()">Destruição do Templo de Herodes</span>
 			
 			<span class="event event0 eIranAx iran" onmouseenter="showTipIran('oIranA2')" onmouseleave="hideTip('oIranA2')" onclick="showSidebarIran('sbIranA2')">Fundação do Império Aquemênida</span>
 			
 			<span class="event event0 e700bc greece deny">Homero e Hesíodo</span>
 			<span class="event event0 e330bc greece" onmouseenter="showTipGreece('oGreeceA2')" onmouseleave="hideTip()" onclick="showSidebarGreece('sbGreeceA2')">Fundação do Império Macedônico</span>
 			<span class="event event0 eCA1" onmouseenter="showTipGreece('oGreeceA3')" onmouseleave="hideTip()" onclick="showSidebarGreece('sbGreeceA3')">Início do Período Helenístico</span>
-			<span class="event event0 eGreeceAx greece deny">Fundação de Alexandria, Egito</span>
+			<!--<span class="event event0 eGreeceAx greece deny">Fundação de Alexandria, Egito</span>-->
 			
 			<span class="event event0 eRomeA0 rome" onmouseenter="showTipRome('oRomeA0')" onmouseleave="hideTip()" onclick="showSidebarRome('sbRomeA0')">Fundação da cidade de Roma</span>
 			<span class="event event0 eRomeA1 rome" onmouseenter="showTipRome('oRomeA1')" onmouseleave="hideTip()" onclick="showSidebarRome('sbRomeA1')">Fundação da República Romana</span>
 			<span class="event event0 eRomeA2 rome" onmouseenter="showTipRome('oRomeA2')" onmouseleave="hideTip()" onclick="showSidebarRome('sbRomeA2')">Fundação do Império Romano</span>
-			<span class="event event0 eRomeA3 rome" onmouseenter="showTipRome('oRomeA3')" onmouseleave="hideTip()" onclick="showSidebarRome('sbRomeA3')">Divisão do Império Romano</span>
+			<span class="event event0 eRomeA3 rome" onmouseenter="showTipG('oRomeA3')" onmouseleave="hideTip()" onclick="showSidebarRome('sbRomeA3')">Divisão do Império Romano</span>
 			<span class="event event0 eRomeA4 rome deny">Rômulo Augústulo é deposto por Odoacro</span>
-			<span class="event event0 eRomeC0 rome deny">Reino de Constantino, O Grande</span>
+			<span class="event event0 eRomeC0 rome deny" onmouseenter="showTipG('oRomeC0')" onmouseleave="hideTip()">Reino de Constantino, O Grande</span>
 			
 		</section>
 		<!--
