--- a/RomeA2.html
+++ b/RomeA2.html
@@ -13,7 +13,7 @@
 
 <div id="achaia" class="sidetipMap"><h2>ACAIA</h2><p>Capital: Corinto<br>27 a.C. - c. 690 d.C.</p></div>
 <div id="aegyptus" class="sidetipMap"><h2>EGITO</h2><p>Capital: Alexandria<br>30 a.C. - 381 d.C.</p></div>
-<div id="africa" class="sidetipMap"><h2>ÁFRICA PROCONSULAR</h2><p>Capital: Cesareia<br>146 a.C. - 591 d.C.</p></div>
+<div id="africa" class="sidetipMap"><h2>ÁFRICA PROCONSULAR</h2><p>Capital: Cartago<br>146 a.C. - 591 d.C.</p></div>
 <div id="cottiae" class="sidetipMap"><h2>ALPES COTIOS</h2><p>Capital: Segúsio<br>63 d.C. - 476 d.C.</p></div>
 <div id="maritimae" class="sidetipMap"><h2>ALPES MARÍTIMOS</h2><p>Capital: Cemenelo<br>63 d.C. - 476 d.C.</p></div>
 <div id="poeninae" class="sidetipMap"><h2>ALPES PENINOS</h2><p>Capital: Fórum Cláudio Valêncio<br>41/54 d.C. - 476 d.C.</p></div>
