--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
 			
 			<span class="event event0 eSA0" onmouseenter="showTipG('oSA0')" onmouseleave="hideTip()" onclick="showSidebarG('eSA0')">Revolução do Neolítico</span>
 			<span class="event event0 eLevantS0 levant deny">Fundação da cidade de Jericó</span>
+			<span class="event event0 eLevantS1 levant deny">Fundação da cidade de Biblos</span>
 			<span class="event event0 eSA00 meso deny">Criação da Escrita Cuneiforme</span>
 			<span class="event event0 eSA1" onmouseenter="showTipG('oSA1')" onmouseleave="hideTip()" onclick="showSidebarG('eSA1')">Idade do Cobre</span>
-			<span class="event event0 eMesoS0 meso deny" onmouseenter="showTipG('oMesoS0')" onmouseleave="hideTip()">Fundação da cidade de Uruk</span>
+			<span class="event event0 eMesoS0 meso deny" onmouseenter="showTipG('oMesoS0')" onmouseleave="hideTip()">Fundação da cidade de Uruque</span>
 			<span class="event event0 eSA2" onmouseenter="showTipG('oBA0')" onmouseleave="hideTip()" onclick="showSidebarG('eBA0')">Idade do Bronze</span>
 			
 		</section>
@@ -188,8 +189,9 @@
 			<span class="event event0 e1650bc egypt deny" onmouseenter="showTipG('o1650bc')" onmouseleave="hideTip()">Governo do Egito pelos Hicsos</span>
 			<span class="event event0 e1353bc egypt deny" onmouseenter="showTipG('o1353bc')" onmouseleave="hideTip()">Reino de Aquenáton</span>
 			
+			<span class="event event0 e2100bc meso deny" onmouseenter="showTipG('o2100bc')" onmouseleave="hideTip()">Composição do ciclo de Gilgamesh</span>
 			<span class="event event0 e2025bc meso deny" onmouseenter="showTipG('o2025bc')" onmouseleave="hideTip()">Fundação da cidade-estado de Assur</span>
-			<span class="event event0 e1750bc meso deny" onmouseenter="showTipG('o1750bc')" onmouseleave="hideTip()">Criação do Código de Hamurabi</span>
+			<span class="event event0 e1792bc meso deny" onmouseenter="showTipG('o1792bc')" onmouseleave="hideTip()">Reino de Hamurabi</span>
 			<span class="event event0 e1595bc meso deny" onmouseenter="showTipG('o1595bc')" onmouseleave="hideTip()">Saque da Babilônia pelos hititas</span>
 			<span class="event event0 e1363bc meso deny">Fundação do Império Assírio</span>
 			
@@ -359,6 +361,8 @@
 			<div class="overlay oRome oRomeA6" onmouseenter="showTipRome('oRomeA6')" onmouseleave="hideTip()" onclick="showSidebarRome('sbRomeA6')"></div>
 			
 		<!-- Events -->
+			
+			<span class="event event0 e605bc meso deny" onmouseenter="showTipG('o605bc')" onmouseleave="hideTip()">Reino de Nabucodonosor II</span>
 			
 			<span class="event event0 eLevantA0 levant deny" onmouseenter="showTipG('oLevantA0')" onmouseleave="hideTip()">Destruição de Israel</span>
 			<span class="event event0 eLevantA1 levant deny" onmouseenter="showTipG('oLevantA1')" onmouseleave="hideTip()">Cerco a Jerusalém</span>
