--- a/Mapa.html
+++ b/Mapa.html
@@ -46,15 +46,16 @@
 <div id="oSahara" class="sidetipMap"><h2>DESERTO DO SAARA</h2></div>
 <div id="oArabianDesert" class="sidetipMap"><h2>DESERTO ÁRABE</h2></div>
 
-<div id="oDanube" class="sidetipMap"><h2>RIO DANÚBIO</h2></div>
-<div id="oDnieper" class="sidetipMap"><h2>RIO DNIEPER</h2></div>
-<div id="oDon" class="sidetipMap"><h2>RIO DON</h2></div>
+<div id="oDanube" class="sidetipMap"><h2>RIO DANÚBIO</h2><p>Historicamente conhecido pelo nome grego <b>Istros</b>.</p></div>
+<div id="oDniester" class="sidetipMap"><h2>RIO DNIESTRE</h2><p>Historicamente conhecido pelo nome grego <b>Tiras</b>.</p></div>
+<div id="oDnieper" class="sidetipMap"><h2>RIO DNIEPER</h2><p>Historicamente conhecido pelo nome grego <b>Borístenes</b>.</p></div>
+<div id="oDon" class="sidetipMap"><h2>RIO DOM</h2><p>Historicamente conhecido pelo nome grego <b>Tanaïs</b>.</p></div>
 <div id="oEuphrates" class="sidetipMap"><h2>RIO EUFRATES</h2></div>
 <div id="oIndus" class="sidetipMap"><h2>RIO INDUS</h2></div>
 <div id="oGanges" class="sidetipMap"><h2>RIO GANGES</h2></div>
 <div id="oJordan" class="sidetipMap"><h2>RIO JORDÃO</h2></div>
 <div id="oNile" class="sidetipMap"><h2>RIO NILO</h2></div>
-<div id="oOxus" class="sidetipMap"><h2>RIO OXUS</h2></div>
+<div id="oOxus" class="sidetipMap"><h2>RIO AMU DÁRIA</h2><p>Historicamente conhecido pelo nome grego <b>Oxus</b>.</p></div>
 <div id="oTigris" class="sidetipMap"><h2>RIO TIGRE</h2></div>
 <div id="oUral" class="sidetipMap"><h2>RIO URAL</h2></div>
 <div id="oVolga" class="sidetipMap"><h2>RIO VOLGA</h2></div>
@@ -63,16 +64,16 @@
 <div id="oLoire" class="sidetipMap"><h2>RIO LÍGER</h2></div>
 <div id="oTajo" class="sidetipMap"><h2>RIO TEJO</h2></div>
 <div id="oTiber" class="sidetipMap"><h2>RIO TIBRE</h2></div>
-<div id="oJaxartes" class="sidetipMap"><h2>RIO JAXARTES</h2></div>
+<div id="oJaxartes" class="sidetipMap"><h2>RIO SIR DÁRIA</h2><p>Historicamente conhecido pelo nome grego <b>Jaxartes</b>.</p></div>
 <div id="oElbe" class="sidetipMap"><h2>RIO ELBA</h2></div>
 <div id="oOder" class="sidetipMap"><h2>RIO ÓDER</h2></div>
 <div id="oVistula" class="sidetipMap"><h2>RIO VÍSTULA</h2></div>
 <div id="oThames" class="sidetipMap"><h2>RIO TÂMISA</h2></div>
 <div id="oKura" class="sidetipMap"><h2>RIO CURA</h2></div>
 <div id="oAras" class="sidetipMap"><h2>RIO ARAX</h2></div>
-<div id="oHalys" class="sidetipMap"><h2>RIO HÁLIS</h2></div>
-<div id="oSangarios" class="sidetipMap"><h2>RIO SACARIA</h2></div>
-<div id="oHermus" class="sidetipMap"><h2>RIO HERMOS</h2></div>
+<div id="oHalys" class="sidetipMap"><h2>RIO QUIZIL-IRMAQUE</h2><p>Historicamente conhecido pelo nome grego <b>Hális</b>.</p></div>
+<div id="oSangarios" class="sidetipMap"><h2>RIO SACARIA</h2><p>Historicamente conhecido pelo nome grego <b>Sangários</b>.</p></div>
+<div id="oHermus" class="sidetipMap"><h2>RIO GEDIZ</h2><p>Historicamente conhecido pelo nome grego <b>Hermos</b>.</p></div>
 <div id="oOrontes" class="sidetipMap"><h2>RIO ORONTES</h2></div>
 
 <div id="oBritain" class="sidetipMap"><h2>BRETANHA</h2></div>
@@ -221,7 +222,7 @@
 			d="m 405.00003,0 -100.00001,115 -40.00003,20 3e-5,55 20,10 35,-20 25,60 h 10.00001 l 5,-10 h 15 l 10,-40 20,-10 v -15 l -15,-10 10,-35 25,-10 15,-35 h 30 v 15 l -40,35 v 30 l 20,15 55.00001,-10 5,5 h 10 l 5,5 h -15 l -10,10 -20.00001,-5 -25,5 v 15 h 10 v 15 l -5.00004,5 h -9.99996 l -5,-10 h -10 l -10,20 5,10 -15,15 -10,5 -5,-10 -40,15 -15.00001,-10 -20,10 h -5 l 5,-5 v -5 l -5,5 -5,-5 -5,-10 10,5 v -10 l -5,-5 10,-5 -10,-10 5,-10 -20,5 -5,10 v 15 l 5,5 -3e-5,20 h -4.99997 l -35,10 -15,25 -20,10 v 5 l -25.00003,15 -4.99998,-5 h -5 l 4.99998,15 h -14.99998 l -5,-5 -15,5 35,30 v 30 l -5,5 -60,-5 -20,10.00001 10,24.99997 -10,30.00002 h 5 v 19.99999 h 25 l 5,10 v 4.99999 l -5,20.00002 -25,14.99999 -20.000005,44.99999 -20,10.00001 L 55.000003,605 30,659.99999 40.000002,685 v 14.99999 l -10.000002,30 5.000001,10 v 15 l 25.000003,25 H 0 V 0 Z"/>
 	   
 			<path class="sea0" id="AralSea" onmouseover="showTipMap('oAralSea')" onmouseout="hideTipMap('oAralSea')"
-			d="m 819.99996,389.99998 -4.99999,-4.99999 v -10 l 9.99998,-15 h 5.00002 V 355 h 4.99999 l 5.00002,-5.00002 h 14.99999 l -10,10.00001 L 849.99996,370 h 5.00001 v 4.99999 l -10,5.00001 0.0629,9.99583 L 829.99997,395 v -5.00002 z"/>
+			d="m 819.99996,389.99998 -4.99999,-4.99999 v -10 l 9.99998,-15 h 5.00002 V 355 h 4.99999 l 5.00002,-5.00002 h 14.99999 l -10,10.00001 L 849.99996,370 h 5.00001 v 4.99999 l -10,5.00001 9e-5,10 -15.00009,5 v -5.00002 z"/>
 			
 			<path class="sea0" id="CaspianSea" onmouseover="showTipMap('oCaspianSea')" onmouseout="hideTipMap('oCaspianSea')"
 			d="m 759.99998,355 4.99999,10.00001 v 9.99998 H 744.99996 L 739.99997,380 l 4.99999,4.99999 h -9.99998 l -5.00002,4.99999 4.81277,-0.004 5.18724,5.00417 4.99999,10.00001 5.00001,4.99999 h 10.00001 l -5.00002,10 5.00002,9.99998 v -9.99998 l 4.99999,-5.00001 h 4.99999 l 5.00001,10 4.99999,4.99999 -4.99999,5.00002 h -10 l -4.99999,-5.00002 v 15.00002 h 4.99999 l 4.99999,4.99999 v 4.99999 25.00001 l -19.99999,5.00001 -14.99999,-5.00001 -5.00002,-4.99999 h -4.99999 l -4.99999,-5.00002 v -15 l 4.99999,-4.99999 v -10 h 10.00001 l -10.00001,-4.99999 -20.00001,-25 v -15 l -9.99998,-10.00001 9.99998,-14.99999 h 10 l 10.00001,-10.00001 h 4.99999 l 10.00001,-4.99999 z"/>
@@ -390,6 +391,9 @@
 		 
 			<path class="river" id="Dnieper" onmouseover="showTipMap('oDnieper')" onmouseout="hideTipMap('oDnieper')"
 			d="m 559.51562,204.87891 -4.92382,19.69336 -24.83789,4.96679 -5.25391,5.25391 v 15 l -5.10742,5.10742 10.06836,20.13867 -4.98828,14.96094 5.16601,15.5 H 534.5 v 4.79102 L 569.86719,330.5 H 574.5 v 14 h -9.80859 l -5.06446,10.12695 -19.85156,9.92578 0.44727,0.89454 20.15039,-10.07422 4.93554,-9.87305 H 575.5 v -16 h -5.36719 L 535.5,309.70898 V 304.5 h -5.14063 l -4.83203,-14.5 5.01172,-15.03906 -9.93164,-19.86133 4.89258,-4.89258 v -15 l 4.74609,-4.74609 25.16211,-5.03321 5.07617,-20.30664 z"/>
+			
+			<path class="river" id="Dniester" onmouseover="showTipMap('oDniester')" onmouseout="hideTipMap('oDniester')"
+			d="m 459.79297,314.5 -5.14649,5.14648 0.70704,0.70704 4.85351,-4.85352 h 4.6543 l 25,15 h 9.98828 l 14.73047,9.82031 4.98242,14.94922 8.08398,8.08399 0.70704,-0.70704 -7.91602,-7.91601 -5.01758,-15.05078 L 500.15234,329.5 h -10.01367 l -25,-15 z"/>
 		 
 			<path class="river" id="Danube" onmouseover="showTipMap('oDanube')" onmouseout="hideTipMap('oDanube')"
 			d="m 334.92187,324.37109 -5.1289,5.12891 h -4.93164 l -25.11914,15.07031 0.51562,0.85938 L 325.13867,330.5 h 5.06836 l 4.87109,-4.87109 24.78321,14.87109 h 5.3457 l 4.94727,-4.94531 19.58984,4.89648 5.04883,5.04883 h 14.5664 L 404.5,364.9375 v 10.42383 l 15.23047,5.07617 5.0625,5.0625 h 19.89844 l 4.9707,9.94141 25.4082,5.08203 10.1211,-5.06055 15.07812,-5.02539 5.23047,-5.23047 V 375.5 h 4.35742 l 8.3086,5.19336 6.98242,-11.63477 L 509.91406,374.5 H 504.5 v 10.29297 l -4.76953,4.76953 -14.92188,4.97461 -9.8789,4.93945 -24.5918,-4.91797 -5.0293,-10.05859 h -20.10156 l -4.9375,-4.9375 L 405.5,374.63867 V 365.0625 L 410.64062,344.5 h -15.43359 l -4.95117,-4.95117 -20.41016,-5.10352 -5.05273,5.05469 h -4.6543 z m 187.93165,46.56836 -5.01954,8.36719 -6.69336,-4.18359 z"/>
