--- a/Mapa.html
+++ b/Mapa.html
@@ -139,10 +139,10 @@
 			<path class="region" id="PCSteppes" onmouseover="showTipMap('oPCSteppes')" onmouseout="hideTipMap('oPCSteppes')"
 			d="m 615.00004,275 -170.00006,44.99999 29.99999,25 10.00006,5.00001 5,10 15.00001,15 h 5 l 14,-5 5.99993,-10.00001 h 5.00001 l 4.99999,5.00002 20.00001,4.99983 -14.99999,5.00015 9.99998,5.00001 h 25 10.00001 v -5.00001 h -15 L 569.99996,370 v -4.99999 L 614.99998,349.99998 619.99997,355 h -4.99999 l -15,4.99999 4.99999,5.00002 -4.99999,9.99998 h -5.00001 V 380 l 14.99999,9.99998 15.00008,2e-5 20.00001,-5 20,15 39.99991,10 V 395 L 694.99998,384.99999 670.00005,375 v -30 l 25,-20 50,-5 -5,-15 5,-10 40.00001,-5 24.9999,10 10,-5.00001 L 824.99995,250 Z"/>
 
-			<path class="region" id="Iran" onmouseover="showTipMap('oIran')" onmouseout="hideTipMap('oIran')"
+			<path class="plateau" id="Iran" onmouseover="showTipMap('oIran')" onmouseout="hideTipMap('oIran')"
 			d="m 675.00005,460 -25,5 -10,5 30,25 9.99992,14.99998 v 10 l 20,15 8e-5,15 15,2e-5 15,10 15,25 25,15 h 20.00001 l 4.99992,-5 10.00008,15 50,10 45,-5 10,-10 v -45 l 15.00001,20 20,-35 20,-30 v -5 l -10,-10 -5,-10 5,-5 v -15 l -10,-10 -5,10 -10,10 -5,-5 -10,5 -20.00001,-5 -15,5 v 10 l -20,10 -10,-5 -5,-10 -40,-20 h -15 L 770.00004,479.99999 750.00005,485 735.00006,479.99999 730.00004,475 h -4.99999 l -5.00002,-5.00002 z"/>
 
-			<path class="region" id="Anatolia" onmouseover="showTipMap('oAnatolia')" onmouseout="hideTipMap('oAnatolia')"
+			<path class="plateau" id="Anatolia" onmouseover="showTipMap('oAnatolia')" onmouseout="hideTipMap('oAnatolia')"
 			d="m 515.00002,424.99999 -4.99999,4.99999 L 520.00004,435 h -10.00001 l -10,4.99999 H 490.00002 L 480.00004,445 v 4.99999 h 4.99999 v 15 l 10.00001,15 h 4.99999 L 505.00004,485 h 4.99999 l 4.99999,4.99999 h 10.00001 L 530.00002,485 h 5.00001 l 10.00001,4.99999 h 15 L 565.00003,485 h 14.99999 l 5.00002,-5.00001 V 485 l 20,-10 9.49996,-5.30859 15.50003,-39.69143 H 600.00004 L 575.00003,420 h -20.00001 l -19.99999,9.99998 h -10 z"/>
 			
 			<path class="region" id="Mesopotamia" onmouseover="showTipMap('oMesopotamia')" onmouseout="hideTipMap('oMesopotamia')"
@@ -151,7 +151,7 @@
 			<path class="region" id="Levant" onmouseover="showTipMap('oLevant')" onmouseout="hideTipMap('oLevant')"
 			d="m 545.00005,549.99999 v 10 l 15,25.00001 h 4.99999 l 5.00001,-19.99999 9.99998,-15.00002 10.00001,-15 15.00001,-44.99998 v -15 l -20,10 L 580.00003,490 v 19.99999 L 565.00004,545 l -4.99999,4.99999 z"/>
 
-			<path class="region" id="Balkans" onmouseover="showTipMap('oBalkans')" onmouseout="hideTipMap('oBalkans')"
+			<path class="plateau" id="Balkans" onmouseover="showTipMap('oBalkans')" onmouseout="hideTipMap('oBalkans')"
 			d="m 435.00002,464.99999 -4.99999,4.99999 9.99998,20.00001 L 450.00002,485 445.00003,475 h 10.00001 l -5.00002,-5.00002 h 5.00002 L 460.00003,475 v -10.00001 l 10,4.99999 -25,-24.99998 v -10 l 4.99999,10 h 15 l -9.99998,-10 14.99999,-5.00002 10.00001,5.00002 4.99999,4.99999 10.00001,-4.99999 4.99999,-5.00002 h 5.00001 l 4.99999,-4.99999 h -4.99999 L 500.00003,420 495.00004,410 h 4.99999 v -4.99999 l 5.00001,-5.00002 4.99999,-15 5.00001,10e-6 3,-5 -8,-5 h -5 v 9.99999 l -5.00001,4.99999 -15,5.00002 -10.00001,4.99999 -25,-4.99999 -4.99999,-10.00001 h -15 l -5,10e-6 -5,-5 -15,-5 h -45 l 5,15 44.99999,30 v 19.99999 l 20.00001,25 z"/>
 
 			<path class="region" id="Italy" onmouseover="showTipMap('oItaly')" onmouseout="hideTipMap('oItaly')"
@@ -160,7 +160,7 @@
 			<path class="region" id="Iberia" onmouseover="showTipMap('oIberia')" onmouseout="hideTipMap('oIberia')"
 			d="m 190.00001,399.99999 -60,-4.99999 -20,10.00001 10,24.99997 -10,30.00002 h 5 v 19.99999 h 25 l 5,10 h 5 l 10,-4.99999 h 25 l 25,-25 -5,-10.00001 15,-20.00001 20,-9.99998 v -5.00002 z"/>
 			
-			<path class="region" id="Tibet" onmouseover="showTipMap('oTibet')" onmouseout="hideTipMap('oTibet')"
+			<path class="plateau" id="Tibet" onmouseover="showTipMap('oTibet')" onmouseout="hideTipMap('oTibet')"
 			d="m 965.00035,510.00043 -10.00004,-10.00008 -5,-10 5,-5 -3.1e-4,-15 -10,-10 v -5 l 40,-10 5,10 35,25 35,10 85,-35 3e-4,145.0001 -15.0003,-10e-5 -10,5 -50,-15 -39.9997,-19.99991 -20.0003,-15.00009 -4.9997,-9.99991 -24.99995,-19.99999 -10,-5.00001 -5,-4.99999 z"/>
 			
 			<path class="region" id="Peloponnese" onmouseover="showTipMap('oPeloponnese')" onmouseout="hideTipMap('oPeloponnese')"
@@ -169,7 +169,7 @@
 			<path class="region" id="Sinai" onmouseover="showTipMap('oSinai')" onmouseout="hideTipMap('oSinai')"
 			d="m 545.00004,549.99998 v 10 l 15,25.00001 h 4.99999 L 570.00004,565 l -5,-20 -5,5 z"/>
 			
-			<path class="region" id="Armenia" onmouseover="showTipMap('oArmenia')" onmouseout="hideTipMap('oArmenia')"
+			<path class="plateau" id="Armenia" onmouseover="showTipMap('oArmenia')" onmouseout="hideTipMap('oArmenia')"
 			d="m 650.00004,410 h 10.00001 l 15,5 19.99992,9.99999 30,10.00016 10.00001,4.99999 L 725.00005,440 v 10 l -5,5 v 15 l -45,-10 -25,5 -10,5 h -25.00001 l 14.99999,-40.00002 10,-4.99999 4.99999,-4.99999 -4.99999,-10 z"/>
 			
 		<!-- MONTANHAS -->
