--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
 			<span class="event event0 eIranAx iran" onmouseenter="showTipIran('oIranA2')" onmouseleave="hideTip('oIranA2')" onclick="showSidebarIran('sbIranA2')">Fundação do Império Aquemênida</span>
 			
 			<span class="event event0 e700bc greece deny">Homero e Hesíodo</span>
+			<span class="event event0 e484bc greece deny">Heródoto</span>
 			<span class="event event0 e330bc greece" onmouseenter="showTipGreece('oGreeceA2')" onmouseleave="hideTip()" onclick="showSidebarGreece('sbGreeceA2')">Fundação do Império Macedônico</span>
 			<span class="event event0 eCA1" onmouseenter="showTipGreece('oGreeceA3')" onmouseleave="hideTip()" onclick="showSidebarGreece('sbGreeceA3')">Início do Período Helenístico</span>
 			<!--<span class="event event0 eGreeceAx greece deny">Fundação de Alexandria, Egito</span>-->
